--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.24.0",
     "@supabase/supabase-js": "^2.47.12",
+    "@types/react-resizable": "^3.0.8",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.1",
     "zustand": "^5.0.3"
   },
